# Office

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  biome.json  package.json  playwright.config.ts  rslib.config.ts  rstest.config.ts  rstest.setup.ts  tsconfig.json
crates/cli/: Cargo.toml
crates/cli/skills/a3s-office/: SKILL.md
crates/cli/skills/a3s-office/agents/: openai.yaml
crates/cli/src/: lib.rs  main.rs  office_mcp.rs  office_native_cli.rs  office_screenshot.rs  office_skills.rs
crates/cli/src/office_mcp/: input.rs  session.rs  support.rs  tests.rs
crates/cli/src/office_mcp/input/: cell_format.rs  conditional_formatting.rs  data_validation.rs  spreadsheet_filter.rs  spreadsheet_import.rs  spreadsheet_sort.rs  spreadsheet_view.rs
crates/cli/src/office_native_cli/: add.rs  arrange.rs  conditional_formatting.rs  data_validation.rs  format.rs  merge.rs  named_range.rs  part.rs  raw.rs  replay.rs  spreadsheet_filter.rs  spreadsheet_formula.rs  spreadsheet_import.rs  spreadsheet_sort.rs  spreadsheet_table.rs  view.rs  watch.rs
crates/cli/src/office_native_cli/format/: border.rs
crates/cli/src/office_screenshot/: tests.rs
crates/cli/src/office_watch/: mod.rs
crates/cli/tests/: office_annotated_cli.rs  office_arrange_cli.rs  office_cell_format_cli.rs  office_cell_format_mcp.rs  office_comment_cli.rs  office_conditional_formatting_cli.rs  office_conditional_formatting_mcp.rs  office_data_validation_cli.rs  office_data_validation_mcp.rs  office_format_cli.rs  office_hyperlink_cli.rs  office_image_cli.rs  office_issues_cli.rs  office_merge_cells_cli.rs  office_merge_cells_mcp.rs  office_merge_cli.rs  office_named_range_cli.rs  office_named_range_mcp.rs  office_part_cli.rs  office_presentation_table_cli.rs  office_raw_cli.rs  office_render_cli.rs  office_replay_cli.rs  office_screenshot_cli.rs  office_spreadsheet_cli.rs  office_spreadsheet_filter_cli.rs  office_spreadsheet_filter_mcp.rs  office_spreadsheet_formula_cli.rs  office_spreadsheet_formula_mcp.rs  office_spreadsheet_import_cli.rs  office_spreadsheet_import_mcp.rs  office_spreadsheet_sort_cli.rs  office_spreadsheet_sort_mcp.rs  office_spreadsheet_table_cli.rs  office_spreadsheet_table_mcp.rs  office_text_replace_cli.rs  office_watch.rs
crates/core/: Cargo.toml
crates/core/src/: discovery.rs  package.rs
crates/core/src/render/: svg.rs
crates/core/src/render/html/: mod.rs
crates/core/src/render/svg/: spreadsheet.rs  word.rs
crates/web-kernel/: Cargo.toml
crates/web-kernel/src/: layout_tests.rs  lib.rs  presentation_geometry.rs  text_layout.rs
crates/web-kernel/src/text_layout/: tests.rs  utf16_offsets.rs  validation.rs
docs/: browser-editor-architecture.md  cli-reference.md  native-office-engine.md
gleam/: office.gleam
playground/: index.html  rsbuild.config.ts  tsconfig.json
scripts/: build-office-kernel.sh  check-playground-bundle.ts  package-a3s-use-extension.sh  package-office-skill.sh  smoke-office-kernel.ts
src/: core.ts  office-surface.tsx  react.tsx  vue.ts  web-component.tsx
tests/: core.test.ts  document-comments.test.ts  document-formatting.test.ts  document-images.test.tsx  (+26 more)
(+329 files in other folders)
