[workspace]
members = ["crates/core", "crates/cli", "crates/web-kernel"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/A3S-Lab/Office"
authors = ["A3S Lab"]
rust-version = "1.85"

[workspace.dependencies]
a3s-use-browser = "0.2.0"
a3s-use-core = "0.2.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
fs2 = "0.4"
futures-util = "0.3"
getrandom = "0.3"
quick-xml = "0.38"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rmcp = { version = "=0.8.5", default-features = false, features = ["base64", "macros", "server", "transport-io"] }
rustybuzz = "0.20"
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "process", "signal", "sync", "time"] }
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
unicode-segmentation = "1"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
